fixed overflowing comments in the user profile

--- a/src/components/PostItems/post-items.css
+++ b/src/components/PostItems/post-items.css
@@ -16,3 +16,7 @@
 .wd-post-href:hover {
     color: lightgrey;
 }
+
+.wd-comment-list-item-overflow-break-word {
+    overflow-wrap: break-word;
+}
